# SudokuAI-old

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/classes/: native_sudoku_scanner.cpp  native_sudoku_scanner.hpp
android/app/src/main/classes/extraction/: grid_extractor.cpp
android/app/src/main/classes/extraction/classification/: number_classifier.cpp
android/app/src/main/kotlin/com/example/sudokuai/: MainActivity.kt
lib/: camera_view_controller.dart  main.dart  sudoku_scanner.dart  view_controller.dart
lib/grid/: sudoku_grid.dart
lib/scanner/: bounding_box.dart  native_functions.dart  native_sudoku_scanner_bridge.dart  sudoku_scanner.dart
lib/view/: camera_view.dart  picture_view.dart  scanner_view.dart  sudoku_view.dart
test/: widget_test.dart
